--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </head>
 <body>
   <div class="form-container">
-    <h2>Contact Form</h2>
+    <h2>Updated Contact Form</h2>
     <div class="form-message" id="form-message"></div>
     <form id="contact-form">
       <div class="form-group">
